--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -63,8 +63,8 @@
     "Stream": {
       "Question": "How aggressive do you like your updates? ",
       "DefaultSelection": "Select your update stream",
-      "Gts": "Bluefin GTS (for most users, based on {version})",
-      "Stable": "Bluefin (for enthusiasts {version})"
+      "Gts": "Bluefin GTS (for most users, based on Fedora {version})",
+      "Stable": "Bluefin (for enthusiasts, based on Fedora {version})"
     },
     "Download": {
       "Iso": "Download the {isoname} ISO",
