--- a/src/locales/de-DE.json
+++ b/src/locales/de-DE.json
@@ -8,7 +8,7 @@
     "Text": "Bluefin ist ein Betriebssystem für deinen Computer. Das Beste beider Welten: die Zuverlässigkeit und Benutzerfreundlichkeit eines Chromebooks, mit der Leistung eines GNOME Desktops.",
     "Tag": "Für",
     "Title": "Dich",
-    "Appendix": "Mit automatischen, Image-basierten Updates und einer einfachen grafischen Applikationsverwaltung ist Bluefin so konzipiert, dass es dir nicht im Weg steht. Hol dir was du willst, ohne die Systemstabilität zu beeinträchtigen. Der Linux-Client hat sich weiterentwickelt und ist ein sauberer Start für die nächste Generation. Erfahre mehr Information im [announcement blog post](https://www.ypsidanger.com/announcing-project-bluefin/) und [introductory documentation](https://docs.projectbluefin.io). \n\nImages stehen für PC, Framework und ASUS Laptops, and Microsoft Surface Geräte zur Verfügung.",
+    "Appendix": "Mit automatischen, Image-basierten Updates und einer einfachen grafischen Applikationsverwaltung ist Bluefin so konzipiert, dass es dir nicht im Weg steht. Hol dir was du willst, ohne die Systemstabilität zu beeinträchtigen. Der Linux-Client hat sich weiterentwickelt und ist ein sauberer Start für die nächste Generation. Erfahre mehr Information im [announcement blog post](https://www.ypsidanger.com/announcing-project-bluefin/) und [introductory documentation](https://docs.projectbluefin.io). \n\nImages stehen für PC, Framework und ASUS Laptops, und Microsoft Surface Geräte zur Verfügung.",
     "ArtworkDescription": "Bluefin Charaktergrafik",
     "Box1": "Applikationen via Flathub",
     "Box2": "Nahezu kein Wartungsaufwand",
