--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -64,7 +64,8 @@
       "Question": "How aggressive do you like your updates? ",
       "DefaultSelection": "Select your update stream",
       "Gts": "Bluefin GTS (for most users, based on Fedora {version})",
-      "Stable": "Bluefin (for enthusiasts, based on Fedora {version})"
+      "Stable": "Bluefin (for enthusiasts, based on Fedora {version})",
+      "Latest": "Bluefin Latest (for advanced users, based on Fedora {version})"
     },
     "Download": {
       "Iso": "Download the {isoname} ISO",
