--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -103,7 +103,7 @@
       },
       "5": {
         "question": "What if I want to use KDE?",
-        "answer": "Aurora is the same Bluefin but uses KDE instead. We hope that Bluefin and Aurora act as inspiration for others to build their own communities around user experiences. Also check out Bazzite if you want an enthusiast-grade gaming experience, similar to SteamOS. Birds of a feather are stronger together. \n\n [Aurora](https://getaurora.dev) \n [Bazzite](https://bazzite.gg)"
+        "answer": "Aurora is similar to Bluefin but uses KDE instead. We hope that Bluefin and Aurora act as inspiration for others to build their own communities around user experiences. Also check out Bazzite if you want an enthusiast-grade gaming experience, similar to SteamOS. Birds of a feather are stronger together. \n\n [Aurora](https://getaurora.dev) \n [Bazzite](https://bazzite.gg)"
       },
       "6": {
         "question": "What do the Framework, Asus, and Surface images do?",
