--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -8,7 +8,7 @@
     "Text": "Bluefin is an operating system for your computer. The best of both worlds: the reliability and ease of use of a Chromebook, with the power of a GNOME desktop.",
     "Tag": "For",
     "Title": "You",
-    "Appendix": "Featuring automatic image-based updates and a simple graphical application store, Bluefin is designed to get out of your way. Get what you want without sacrificing system stability. The Linux client has evolved, a clean start for the next generation. Check the [announcement blog post](https://www.ypsidanger.com/announcing-project-bluefin/) and [introductory documentation](https://docs.projectbluefin.io) for more information. \n\nImages are available for PC, Framework and ASUS laptops, and Microsoft Surface devices.",
+    "Appendix": "Featuring automatic image-based updates and a simple graphical application store, Bluefin is designed to get out of your way. Get what you want without sacrificing system stability. The Linux client has evolved, a clean start for the next generation. Check the [announcement blog post](https://www.ypsidanger.com/announcing-project-bluefin/) and [introductory documentation](https://docs.projectbluefin.io) for more information.",
     "ArtworkDescription": "Character bluefin artwork",
     "Box1": "Applications by Flathub",
     "Box2": "Near-zero maintenance",
