--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -60,7 +60,7 @@
       "Iso": "Download the {isoname} ISO",
       "Registry": "View details on the GitHub Container Registry",
       "Checksum": "Verify (SHA256)",
-      "DocumentationURL": "Check out the [Bluefin Documentation](https://docs.projectbluefin.io/), it takes about 15 minutes and includes an installation runbook - set yourself up for success, you are headed into a new world. <br/><br/><span style='font-weight: 900'>GTS Users:</span> The installation ISO is built on an older version of Fedora and will update to the latest supported version automatically.",
+      "DocumentationURL": "Check out the [Bluefin Documentation](https://docs.projectbluefin.io/), it takes about 15 minutes and includes an installation runbook - set yourself up for success, you are headed into a new world. <br/><br/><span style='font-weight: 900'>Looking for Bluefin GTS?</span> GTS ISOs are currently unavailable but will return in Spring 2025.",
       "DeveloperNote": "Check out [Introduction to Bluefin DX](https://docs.projectbluefin.io/bluefin-dx).",
       "DollyChill": "Dolly chilling near your ISO link"
     }
